# inventree_order_calculator

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
order_calculator/: __init__.py  logic.py  plugin.py  urls.py  views.py
order_calculator/static/order_calculator/: OrderCalculatorWidget.js  calculator.js
order_calculator/templates/order_calculator/: calculator_page.html
