[metadata]
# See setup.py for primary metadata
license_files = LICENSE

[options]
include_package_data = True
packages = find:
# Add any specific package data to include if needed
# e.g., package_data = order_calculator = templates/*, static/*

[options.entry_points]
# Entry point is defined in setup.py

[options.packages.find]
where = .
exclude =
    tests*

[flake8]
# Optional: Add flake8 configuration if used for linting
max-line-length = 88
extend-ignore = E203

[isort]
# Optional: Add isort configuration if used for import sorting
profile = black
